maze.shortestpath.ShortestPathMaze.scala.error
Compilation error:
ShortestPathMaze:15: error: ':' expected but ',' found.
def avance(x,y) {
            ^ShortestPathMaze:35: error: identifier expected but '}' found.
}
^